--- a/ebadmin/package.json
+++ b/ebadmin/package.json
@@ -7,9 +7,11 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "enter": "docker exec -it ebadmin_container bash"
   },
   "dependencies": {
+    "@strapi/plugin-graphql": "4.6.0",
     "@strapi/plugin-i18n": "4.6.0",
     "@strapi/plugin-users-permissions": "4.6.0",
     "@strapi/strapi": "4.6.0",
