--- a/ebclientssr/package.json
+++ b/ebclientssr/package.json
@@ -1,13 +1,10 @@
 {
   "name": "vite-typescript-ssr-react",
   "version": "1.0.1",
-  "description": "Boilerplate for a modern web stack",
   "repository": {
     "type": "git",
     "url": "https://github.com/jonluca/vite-typescript-ssr-react"
   },
-  "author": "JonLuca DeCaro",
-  "license": "MIT",
   "scripts": {
     "dev:server": "nodemon --watch server.ts --watch src/server --exec 'ts-node server.ts'",
     "dev:client": "yarn build:client && vite --config vite.config.ts dev",
@@ -22,7 +19,8 @@
     "serve:local": "vite serve",
     "clean": "rimraf dist/",
     "copy-files": "copyfiles static/* dist/assets && copyfiles index.html dist && copyfiles -f dist/client/assets/* dist/assets",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "enter": "docker exec -it ebclientssr_container bash"
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
@@ -34,7 +32,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "serve-static": "^1.15.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "antd": "5.1.6",
+    "@ant-design/icons": "4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
