--- a/ebclientssr/package.json
+++ b/ebclientssr/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vite-typescript-ssr-react",
   "version": "1.0.1",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/jonluca/vite-typescript-ssr-react"
@@ -20,9 +21,12 @@
     "clean": "rimraf dist/",
     "copy-files": "copyfiles static/* dist/assets && copyfiles index.html dist && copyfiles -f dist/client/assets/* dist/assets",
     "format": "prettier --write .",
-    "enter": "docker exec -it ebclientssr_container bash"
+    "enter": "docker exec -it ebclientssr_container bash",
+    "lint": "eslint ./src/"
   },
   "dependencies": {
+    "@ant-design/icons": "4.0.0",
+    "antd": "5.1.6",
     "autoprefixer": "^10.4.13",
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
@@ -32,37 +36,39 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "serve-static": "^1.15.0",
-    "ts-node": "^10.9.1",
-    "antd": "5.1.6",
-    "@ant-design/icons": "4.0.0"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/compression": "1.7.2",
     "@types/concurrently": "6.4.0",
     "@types/eslint": "8.4.10",
+    "@types/express": "^4.17.15",
     "@types/node": "18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-react": "^3.0.0",
     "concurrently": "7.6.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.31.0",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-config-standard-with-typescript": "^33.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^20.0.3",
     "postcss": "8.4.20",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "tailwindcss": "3.2.4",
-    "typescript": "4.9.4",
+    "typescript": "*",
     "vite": "4.0.3",
     "vitest": "^0.26.3"
   }
