--- a/ebclientssr/.eslintrc.json
+++ b/ebclientssr/.eslintrc.json
@@ -42,7 +42,17 @@
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-floating-promises": "warn",
         "@typescript-eslint/no-non-null-assertion": "off",
-        "@typescript-eslint/member-delimiter-style": "error",
+
+        "@typescript-eslint/member-delimiter-style": ["error", {
+            "multiline": {
+              "delimiter": "semi",    // 'none' or 'semi' or 'comma'
+              "requireLast": true
+            },
+            "singleline": {
+              "delimiter": "semi",    // 'semi' or 'comma'
+              "requireLast": false
+            }
+        }],
         "@typescript-eslint/no-use-before-define": "off",
         "arrow-parens": "off",
         "camelcase": "off",
