--- a/ebclientssr/package.json
+++ b/ebclientssr/package.json
@@ -31,6 +31,7 @@
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
     "express": "4.18.2",
+    "graphql-hooks": "^6.1.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -63,6 +64,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "graphql-hooks": "^6.1.0",
     "jsdom": "^20.0.3",
     "postcss": "8.4.20",
     "prettier": "^2.8.1",
