--- a/ebclientssr/.eslintrc.json
+++ b/ebclientssr/.eslintrc.json
@@ -13,6 +13,16 @@
         "standard-with-typescript"
     ],
     "overrides": [
+        {
+			"files": [
+				"**/*.tsx"
+			],
+			"rules": {
+				"react/prop-types": 0,
+				"react/no-unused-prop-types": 0,
+				"react/require-default-props": "off"
+			}
+		}
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -24,6 +34,7 @@
         "react-hooks"
     ],
     "rules": {
+        "@typescript-eslint/strict-boolean-expressions": 0,
 		"@typescript-eslint/ban-ts-comment": "warn",
         "@typescript-eslint/ban-types": ["error", {
             "types": {
@@ -45,11 +56,11 @@
 
         "@typescript-eslint/member-delimiter-style": ["error", {
             "multiline": {
-              "delimiter": "semi",    // 'none' or 'semi' or 'comma'
+              "delimiter": "semi",    // "none" or "semi" or "comma"
               "requireLast": true
             },
             "singleline": {
-              "delimiter": "semi",    // 'semi' or 'comma'
+              "delimiter": "semi",    // "semi" or "comma"
               "requireLast": false
             }
         }],
