--- a/ebclientssr/package.json
+++ b/ebclientssr/package.json
@@ -33,11 +33,13 @@
     "express": "4.18.2",
     "graphql-hooks": "^6.1.0",
     "nodemon": "^2.0.20",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "serve-static": "^1.15.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "vite-tsconfig-paths": "^4.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -47,6 +49,7 @@
     "@types/eslint": "8.4.10",
     "@types/express": "^4.17.15",
     "@types/node": "18.11.18",
+    "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
@@ -70,7 +73,7 @@
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "tailwindcss": "3.2.4",
-    "typescript": "*",
+    "typescript": "4.9.5",
     "vite": "4.0.3",
     "vitest": "^0.26.3"
   }
