--- a/ebclientssr/tsconfig.json
+++ b/ebclientssr/tsconfig.json
@@ -3,7 +3,7 @@
     "allowJs": true,
     "alwaysStrict": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "checkJs": true,
     "declaration": true,
     "declarationMap": true,
