--- a/ebclientssr/package.json
+++ b/ebclientssr/package.json
@@ -26,12 +26,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.0.0",
+    "@types/lodash": "^4.14.191",
     "antd": "5.1.6",
     "autoprefixer": "^10.4.13",
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
     "express": "4.18.2",
     "graphql-hooks": "^6.1.0",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.20",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
