--- a/ebclientssr/.prettierrc
+++ b/ebclientssr/.prettierrc
@@ -1,11 +1,7 @@
 {
-  "printWidth": 120,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "useTabs": true,
-  "tabWidth": 4,
-  "requireConfig": false,
-  "arrowParens": "avoid",
-  "bracketSpacing": true,
-  "semi": true
+	"tabWidth": 4,
+	"useTabs": true,
+	"trailingComma": "es5",
+	"semi": true,
+	"singleQuote": true
 }
