--- a/ebclientssr/package.json
+++ b/ebclientssr/package.json
@@ -25,19 +25,23 @@
     "lint": "eslint ./src/"
   },
   "dependencies": {
-    "@ant-design/icons": "4.0.0",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/lodash": "^4.14.191",
-    "antd": "5.1.6",
     "autoprefixer": "^10.4.13",
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
     "express": "4.18.2",
+    "framer-motion": "^10.12.18",
     "graphql-hooks": "^6.1.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.20",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.6.1",
     "serve-static": "^1.15.0",
     "ts-node": "^10.9.1",
@@ -74,8 +78,7 @@
     "postcss": "8.4.20",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
-    "tailwindcss": "3.2.4",
-    "typescript": "4.9.5",
+    "typescript": "^5.1.6",
     "vite": "4.0.3",
     "vitest": "^0.26.3"
   }
