--- a/ebclientssr/package.json
+++ b/ebclientssr/package.json
@@ -42,7 +42,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.6.1",
+    "rehype-raw": "^6.1.1",
     "serve-static": "^1.15.0",
     "ts-node": "^10.9.1",
     "vite-tsconfig-paths": "^4.0.5"
