--- a/ebadmin/package.json
+++ b/ebadmin/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-i18n": "4.6.0",
     "@strapi/plugin-users-permissions": "4.6.0",
     "@strapi/strapi": "4.6.0",
+    "better-sqlite3": "^9.4.3",
     "pg": "8.6.0",
     "sharp": "^0.31.3"
   },
