--- a/ebclientnext/tsconfig.json
+++ b/ebclientnext/tsconfig.json
@@ -19,7 +19,8 @@
     "paths": {
       "@lib/*": ["lib/*"],
       "@modules/*": ["modules/*"],
-      "@pages/*": ["pages/*"]
+      "@pages/*": ["pages/*"],
+      "@types/*": ["types/*"]
     },
     "plugins": [
       {
