--- a/ebclientnext/.eslintrc.json
+++ b/ebclientnext/.eslintrc.json
@@ -8,7 +8,7 @@
 			"version": "detect"
 		}
 	},
-	"extends": ["next/core-web-vitals"],
+	"extends": ["next/core-web-vitals", "eslint:recommended", "plugin:react/recommended"],
 	"overrides": [
 		{
 			"files": ["**/*.tsx"],
@@ -19,12 +19,7 @@
 			}
 		}
 	],
-	// "parserOptions": {
-	// 	"ecmaVersion": "latest",
-	// 	"sourceType": "module",
-	// 	"project": ["./tsconfig.json"]
-	// },
-	"plugins": [ "eslint-plugin-react-hooks"],
+	"plugins": ["react-hooks", "@next/eslint-plugin-next", "eslint-plugin-react-hooks"],
 	"rules": {
 		"@typescript-eslint/naming-convention": "off",
 		"multiline-ternary": 0,
