--- a/ebclientnext/.prettierrc
+++ b/ebclientnext/.prettierrc
@@ -1,8 +1,9 @@
 {
   "arrowParens": "always",
-  "semi": false,
   "endOfLine": "auto",
-  "singleQuote": false,
-  "tabWidth": 2,
-  "trailingComma": "es5"
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 4,
+  "trailingComma": "es5",
+  "useTabs": true
 }
