--- a/ebclientnext/package.json
+++ b/ebclientnext/package.json
@@ -37,6 +37,7 @@
     "algoliasearch": "^4.20.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "lodash": "^4.17.21",
     "medusa-react": "^9.0.0",
     "next": "^14.0.0",
